[gd_scene load_steps=2 format=3 uid="uid://c5svm8lt1hywc"]

[ext_resource type="Script" path="res://scripts/title.gd" id="1_3yn27"]

[node name="Title" type="Node2D"]
script = ExtResource("1_3yn27")

[node name="BasicBackground" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.325441, 0.325441, 0.325441, 1)

[node name="TitleBox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Title" type="RichTextLabel" parent="TitleBox"]
offset_top = 175.0
offset_right = 1152.0
offset_bottom = 222.0
theme_override_font_sizes/mono_font_size = 1
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Organ-Ization[/center]"

[node name="Start" type="Button" parent="TitleBox"]
offset_left = 544.0
offset_top = 423.0
offset_right = 608.0
offset_bottom = 454.0
text = "Start"

[node name="SettingsButton" type="Button" parent="TitleBox"]
layout_mode = 0
offset_left = 432.0
offset_top = 479.0
offset_right = 512.0
offset_bottom = 510.0
text = "Settings"

[node name="InstructionsButton" type="Button" parent="TitleBox"]
layout_mode = 0
offset_left = 520.0
offset_top = 479.0
offset_right = 632.0
offset_bottom = 510.0
text = "Instructions"

[node name="CreditsButton" type="Button" parent="TitleBox"]
offset_left = 640.0
offset_top = 479.0
offset_right = 720.0
offset_bottom = 510.0
text = "Credits"

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Back" type="Button" parent="Settings"]
offset_left = 552.0
offset_top = 560.0
offset_right = 600.0
offset_bottom = 591.0
text = "Back"

[node name="Instructions" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Back" type="Button" parent="Instructions"]
offset_left = 552.0
offset_top = 560.0
offset_right = 600.0
offset_bottom = 591.0
text = "Back"

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Back" type="Button" parent="Credits"]
offset_left = 552.0
offset_top = 560.0
offset_right = 600.0
offset_bottom = 591.0
text = "Back"

[connection signal="button_up" from="TitleBox/Start" to="." method="on_start"]
[connection signal="pressed" from="TitleBox/SettingsButton" to="." method="on_settings"]
[connection signal="pressed" from="TitleBox/InstructionsButton" to="." method="on_instructions"]
[connection signal="pressed" from="TitleBox/CreditsButton" to="." method="on_credits"]
[connection signal="pressed" from="Settings/Back" to="." method="on_settings_back"]
[connection signal="pressed" from="Instructions/Back" to="." method="on_instructions_back"]
[connection signal="pressed" from="Credits/Back" to="." method="on_credits_back"]
